@@ -53,14 +53,15 @@ pipeline.chromosomeExpressionReports <- function()
   {
     x[ order( as.numeric(gene.info$chr.start[x]) ) ]
   })
-#  chr.gene.list <- chr.gene.list[ which( sapply( chr.gene.list, length ) > 100 ) ]
-  
-  chr.exp.list <- lapply( chr.gene.list, function(x)
+
+  if(ncol(indata)<500)  
   {
-    Smooth.Matrix( indata[x,], min(50, length(x)/10) )
-  })
-  chr.exp.matrix <- do.call( rbind, chr.exp.list )
-  
+    chr.exp.list <- lapply( chr.gene.list, function(x)
+    {
+      Smooth.Matrix( indata[x,], min(50, length(x)/10) )
+    })
+    chr.exp.matrix <- do.call( rbind, chr.exp.list )
+  }  
   
   chr.pq.gene.list <- lapply( chromosome.list, function(x)
   {
@@ -77,52 +78,55 @@ pipeline.chromosomeExpressionReports <- function()
   }) )
   
   
-  o.samples <- hclust( dist(t(chr.exp.matrix)) )$order
   o.samples.pq <- hclust( dist(t(chr.pq.exp.matrix)) )$order
   o.chr.pq <- hclust( dist(chr.pq.exp.matrix) )$order 
 
-  chr.exp.matrix <- chr.exp.matrix[seq(1,nrow(chr.exp.matrix),2),]
   
   # Heatmap Outputs
   dir.create(paste(files.name, "- Results/Data Overview"), showWarnings=FALSE)
 
   filename <- file.path(paste(files.name, "- Results"), "Data Overview", "Chromosome Expression.pdf")
   util.info("Writing:", filename)
-  pdf(filename, 29.7/2.54, 21/2.54)
+  pdf(filename, 29.7/2.54, 21/2.54, useDingbats=FALSE)
 
-  layout( matrix(1:2,1), widths = c(20,1) )
-  par( mar=c(4,4,2,0.5) )
-  image( x=1:nrow(chr.exp.matrix), y=1:ncol(chr.exp.matrix), z=chr.exp.matrix[,ncol(chr.exp.matrix):1], zlim=max(abs(chr.exp.matrix))*c(-1,1), col=color.palette.heatmaps(1000), axes=FALSE, xlab="chromosome", ylab="samples" )
-    box()
-    abline(v=cumsum( sapply(chr.exp.list,nrow) )/2 + 0.5)
-    axis( 1, cumsum( sapply(chr.exp.list,nrow) )/2 - sapply(chr.exp.list,nrow)/2 / 2, names(chr.exp.list) )
+  if(ncol(indata)<500)  
+  {
+    o.samples <- hclust( dist(t(chr.exp.matrix)) )$order
+    chr.exp.matrix <- chr.exp.matrix[seq(1,nrow(chr.exp.matrix),2),]
+    
+    layout( matrix(1:2,1), widths = c(20,1) )
+    par( mar=c(4,4,2,0.5) )
+    image( x=1:nrow(chr.exp.matrix), y=1:ncol(chr.exp.matrix), z=chr.exp.matrix[,ncol(chr.exp.matrix):1], zlim=max(abs(chr.exp.matrix))*c(-1,1), col=color.palette.heatmaps(1000), axes=FALSE, xlab="chromosome", ylab="samples" )
+      box()
+      abline(v=cumsum( sapply(chr.exp.list,nrow) )/2 + 0.5)
+      axis( 1, cumsum( sapply(chr.exp.list,nrow) )/2 - sapply(chr.exp.list,nrow)/2 / 2, names(chr.exp.list) )
+    
+    par( mar=c(4,0,2,1) )
+    image( t(matrix(1:length(group.colors) ) ), col = rev(group.colors), axes=FALSE )
+    
+    par( new=TRUE, mfrow=c(1,1), mar=c(4,1.3,26,55.3) )
+    image(matrix(1:1000,ncol=1000), col=color.palette.heatmaps(1000), axes=FALSE )
+      box()
+      axis(2, c(0,0.5,1), round(max(abs(chr.exp.matrix))*c(-1,0,1),1), las=2, line=-0.5, cex.axis=.6, tick=FALSE )
+      axis(3, 0,  bquote(Delta ~ e), tick=FALSE, line=-1 )
+    
+    
+    layout( matrix(1:2,1), widths = c(20,1) )
+    par( mar=c(4,4,2,0.5) )
+    image( x=1:nrow(chr.exp.matrix), y=1:ncol(chr.exp.matrix), z=chr.exp.matrix[,o.samples], zlim=max(abs(chr.exp.matrix))*c(-1,1), col=color.palette.heatmaps(1000), axes=FALSE, xlab="chromosome", ylab="samples (clustered)" )
+      box()
+      abline(v=cumsum( sapply(chr.exp.list,nrow) )/2 + 0.5)
+      axis( 1, cumsum( sapply(chr.exp.list,nrow) )/2 - sapply(chr.exp.list,nrow)/2 / 2, names(chr.exp.list) )
+    
+    par( mar=c(4,0,2,1) )
+    image( t(matrix(1:length(group.colors) ) ), col = group.colors[o.samples], axes=FALSE )
   
-  par( mar=c(4,0,2,1) )
-  image( t(matrix(1:length(group.colors) ) ), col = rev(group.colors), axes=FALSE )
-  
-  par( new=TRUE, mfrow=c(1,1), mar=c(4,1.3,26,55.3) )
-  image(matrix(1:1000,ncol=1000), col=color.palette.heatmaps(1000), axes=FALSE )
-    box()
-    axis(2, c(0,0.5,1), round(max(abs(chr.exp.matrix))*c(-1,0,1),1), las=2, line=-0.5, cex.axis=.6, tick=FALSE )
-    axis(3, 0,  bquote(Delta ~ e), tick=FALSE, line=-1 )
-  
-  
-  layout( matrix(1:2,1), widths = c(20,1) )
-  par( mar=c(4,4,2,0.5) )
-  image( x=1:nrow(chr.exp.matrix), y=1:ncol(chr.exp.matrix), z=chr.exp.matrix[,o.samples], zlim=max(abs(chr.exp.matrix))*c(-1,1), col=color.palette.heatmaps(1000), axes=FALSE, xlab="chromosome", ylab="samples (clustered)" )
-    box()
-    abline(v=cumsum( sapply(chr.exp.list,nrow) )/2 + 0.5)
-    axis( 1, cumsum( sapply(chr.exp.list,nrow) )/2 - sapply(chr.exp.list,nrow)/2 / 2, names(chr.exp.list) )
-  
-  par( mar=c(4,0,2,1) )
-  image( t(matrix(1:length(group.colors) ) ), col = group.colors[o.samples], axes=FALSE )
-
-  par( new=TRUE, mfrow=c(1,1), mar=c(4,1.3,26,55.3) )
-  image(matrix(1:1000,ncol=1000), col=color.palette.heatmaps(1000), axes=FALSE )
-    box()
-    axis(2, c(0,0.5,1), round(max(abs(chr.exp.matrix))*c(-1,0,1),1), las=2, line=-0.5, cex.axis=.6, tick=FALSE )
-    axis(3, 0,  bquote(Delta ~ e), tick=FALSE, line=-1 )
-  
+    par( new=TRUE, mfrow=c(1,1), mar=c(4,1.3,26,55.3) )
+    image(matrix(1:1000,ncol=1000), col=color.palette.heatmaps(1000), axes=FALSE )
+      box()
+      axis(2, c(0,0.5,1), round(max(abs(chr.exp.matrix))*c(-1,0,1),1), las=2, line=-0.5, cex.axis=.6, tick=FALSE )
+      axis(3, 0,  bquote(Delta ~ e), tick=FALSE, line=-1 )
+  }  
 
   layout( matrix(1:2,1), widths = c(20,1) )
   
