@@ -30,17 +30,17 @@ pipeline.patAssignment <- function()
     while( sort(table(pat.labels[which(!pat.labels%in%skip.pats)]))[1] < length(pat.labels)*0.01 )
     {
       pat.to.merge <- find.next.merge.pat( pat.labels, skip.pats, spot.counts )
-      if( length(strsplit(pat.to.merge," ")[[1]] > 1) )
-      {
+#      if( length(strsplit(pat.to.merge," ")[[1]] ) > 1 ) 
+#      {
         least.freq.spot <- names(sort(spot.counts[ strsplit(pat.to.merge," ")[[1]] ])[1])
         pat.after.merge <- sub(least.freq.spot,"",pat.to.merge)
         pat.after.merge <- sub("  "," ",pat.after.merge)
         pat.after.merge <- sub("^ | $","",pat.after.merge)  
         pat.labels[which(pat.labels==pat.to.merge)] <<- pat.after.merge
-      } else
-      {
-        skip.pats <- c(skip.pats,pat.to.merge)
-      }
+ #     } else
+ #     {
+ #       skip.pats <- c(skip.pats,pat.to.merge)
+ #     }
     } 
   
   pat.labels[which(pat.labels=="")] <<- "none"
